--- a/SchoolSeatMapper/View/SeatMapper.xaml
+++ b/SchoolSeatMapper/View/SeatMapper.xaml
@@ -9,65 +9,68 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid x:Name="SeatInfo">
+    <Grid x:Name="SeatInfo" Background="#FFF9FDFF">
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Label
             x:Name="row_info"
-            Grid.Row="0"
             Grid.Column="0"
             Width="30"
+            Margin="30,0,0,0"
             HorizontalAlignment="Left"
+            VerticalAlignment="Center"
             Content="행" />
         <Label
             x:Name="column_info"
-            Grid.Row="0"
             Grid.Column="1"
             Width="30"
+            Margin="30,0,0,0"
             HorizontalAlignment="Left"
+            VerticalAlignment="Center"
             Content="열" />
         <Label
             x:Name="row_label"
-            Grid.Row="0"
             Grid.Column="0"
             Width="30"
             Margin="60,0,0,0"
             HorizontalAlignment="Left"
+            VerticalAlignment="Center"
             Content="" />
         <Label
             x:Name="column_label"
-            Grid.Row="0"
             Grid.Column="1"
             Width="30"
             Margin="60,0,0,0"
             HorizontalAlignment="Left"
+            VerticalAlignment="Center"
             Content="" />
 
         <Button
             x:Name="mix_seat_btn"
-            Grid.Row="0"
-            Grid.Column="2"
+            Grid.Column="3"
+            HorizontalAlignment="Center"
             Click="mix_seat_btn_Click"
             Content="자리 섞기" />
 
         <Button
             x:Name="gen_seat_btn"
-            Grid.Row="0"
-            Grid.Column="3"
+            Grid.Column="4"
+            HorizontalAlignment="Center"
             Click="gen_seat_btn_Click"
             Content="자리 생성" />
 
         <ContentControl
             x:Name="control"
             Grid.Row="1"
-            Grid.ColumnSpan="4" />
+            Grid.ColumnSpan="5" />
     </Grid>
 </Page>
