--- a/SchoolSeatMapper/ViewModel/SeatSelector.xaml
+++ b/SchoolSeatMapper/ViewModel/SeatSelector.xaml
@@ -36,7 +36,7 @@
             Grid.Column="2"
             HorizontalAlignment="Center"
             Click="separate_btn_Click"
-            Content="분리 요망" />
+            Content="분리" />
         <ItemsControl
             Grid.Row="1"
             Grid.ColumnSpan="4"
