2023-12-29 Day+2 Update Final

--- a/SchoolSeatMapper/View/Info.xaml
+++ b/SchoolSeatMapper/View/Info.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <ContentControl>
-        <Grid>
+        <Grid Background="#FFE9E9E9">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="18*" />
