--- a/SchoolSeatMapper/MainWindow.xaml
+++ b/SchoolSeatMapper/MainWindow.xaml
@@ -37,7 +37,10 @@
                         Grid.Column="1"
                         Margin="12,0,0,0"
                         VerticalAlignment="Center">
-                        <TextBlock x:Name="box_loginid" Text="ID" />
+                        <TextBlock
+                            x:Name="box_loginid"
+                            Text="ID"
+                            Visibility="Collapsed" />
                         <TextBlock
                             x:Name="msgbox_login"
                             Foreground="DarkRed"
@@ -51,11 +54,6 @@
                 </Grid>
             </ui:NavigationView.PaneHeader>
             <ui:NavigationView.MenuItems>
-                <!--<ui:NavigationViewItem Content="홈" NavigationCacheMode="Enabled">
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Home24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>-->
                 <ui:NavigationViewItem
                     Content="자리 배정"
                     NavigationCacheMode="Enabled"
