--- a/SchoolSeatMapper/View/Settings.xaml
+++ b/SchoolSeatMapper/View/Settings.xaml
@@ -1,14 +1,34 @@
-﻿<Page x:Class="SchoolSeatMapper.Settings"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:SchoolSeatMapper"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Settings">
+﻿<Page
+    x:Class="SchoolSeatMapper.Settings"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SchoolSeatMapper"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Settings"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
-    <Grid>
-        
+    <Grid Background="#FFFFFAE8">
+        <GroupBox Margin="10" Header="일반 설정">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <ComboBox
+                    x:Name="autosave_combo"
+                    Margin="10,10,0,0"
+                    VerticalAlignment="Top"
+                    BorderBrush="Black"
+                    SelectionChanged="autosave_combo_SelectionChanged"
+                    SelectedIndex="0">
+                    <ComboBoxItem Content="분리 좌석 안함" />
+                    <ComboBoxItem Content="분리 좌석 (대각 허용)" />
+                    <ComboBoxItem Content="분리 좌석 (대각 금지)" />
+                </ComboBox>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Page>
