--- a/SchoolSeatMapper/ViewModel/SeatManager.xaml
+++ b/SchoolSeatMapper/ViewModel/SeatManager.xaml
@@ -8,23 +8,28 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
+    <Grid Background="#FFF9FDFF">
         <Grid.RowDefinitions>
-            <RowDefinition Height="32"/>
-            <RowDefinition/>
+            <RowDefinition Height="32" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Button
             x:Name="save_btn"
-            Click="save_btn_Click"
-            Content="로그에 저장" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center"/>
-        <ItemsControl
+            Grid.Row="0"
+            Grid.Column="0"
             HorizontalAlignment="Center"
+            Click="save_btn_Click"
+            Content="로그에 저장" />
+        <ItemsControl
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Left"
             VerticalAlignment="Center"
-            ItemsSource="{Binding Seats}" Grid.Row="1" Grid.ColumnSpan="2" >
+            ItemsSource="{Binding Seats}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <UniformGrid
@@ -40,7 +45,7 @@
                         Height="50"
                         Margin="10"
                         Click="SeatButton_Click"
-                        Content="{Binding Number}"
+                        Content="{Binding Name}"
                         IsEnabled="{Binding Available}">
                         <Button.Style>
                             <Style TargetType="Button">
