--- a/SchoolSeatMapper/ViewModel/SeatSelector.xaml
+++ b/SchoolSeatMapper/ViewModel/SeatSelector.xaml
@@ -8,13 +8,12 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
+    <Grid Background="#FFF9FDFF">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100" />
             <ColumnDefinition Width="120" />
             <ColumnDefinition Width="120" />
             <ColumnDefinition />
-            <ColumnDefinition Width="180" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="32" />
@@ -58,7 +57,7 @@
                         Height="50"
                         Margin="10"
                         Click="SeatButton_Click"
-                        Content="{Binding Number}"
+                        Content="{Binding Name}"
                         IsEnabled="{Binding Available}">
                         <Button.Style>
                             <Style TargetType="Button">
