--- a/SchoolSeatMapper/View/Settings.xaml
+++ b/SchoolSeatMapper/View/Settings.xaml
@@ -8,10 +8,14 @@
     Title="Settings"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    Loaded="Page_Loaded"
     mc:Ignorable="d">
-
     <Grid Background="#FFFFFAE8">
-        <GroupBox Margin="10" Header="일반 설정">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <GroupBox Margin="10,10,10,10" Header="일반 설정">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
@@ -19,15 +23,52 @@
                 </Grid.ColumnDefinitions>
                 <ComboBox
                     x:Name="autosave_combo"
-                    Margin="10,10,0,0"
+                    Margin="10"
                     VerticalAlignment="Top"
                     BorderBrush="Black"
-                    SelectionChanged="autosave_combo_SelectionChanged"
-                    SelectedIndex="0">
+                    SelectedIndex="0"
+                    SelectionChanged="autosave_combo_SelectionChanged">
+                    <ComboBox.Style>
+                        <Style TargetType="{x:Type ComboBox}">
+                            <Setter Property="BorderBrush" Value="Gray" />
+                            <Setter Property="Background" Value="White" />
+                            <Setter Property="FontSize" Value="16" />
+                            <Setter Property="FontWeight" Value="Bold" />
+                            <Setter Property="MinWidth" Value="50" />
+                            <Setter Property="MinHeight" Value="32" />
+                        </Style>
+                    </ComboBox.Style>
                     <ComboBoxItem Content="분리 좌석 안함" />
                     <ComboBoxItem Content="분리 좌석 (대각 허용)" />
                     <ComboBoxItem Content="분리 좌석 (대각 금지)" />
                 </ComboBox>
+            </Grid>
+        </GroupBox>
+        <GroupBox
+            Grid.Row="1"
+            Margin="10,10,10,10"
+            Header="고급 설정">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Button
+                    x:Name="Setting_Reset_Btn"
+                    Grid.Column="2"
+                    Margin="10,120,10,10"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    BorderBrush="DimGray"
+                    Click="Setting_Reset_Btn_Click"
+                    Content="설정 초기화"
+                    ToolTip="설정을 초기화하고 프로그램을 재시작합니다." />
+                <Label
+                    x:Name="Setting_Version_Label"
+                    Grid.Column="2"
+                    Margin="10,73,10,73"
+                    HorizontalContentAlignment="Right" />
             </Grid>
         </GroupBox>
     </Grid>
